fix(rcac): Darken tag color to increase contrast

--- a/app/Themes/Rcac/assets/css/content.css
+++ b/app/Themes/Rcac/assets/css/content.css
@@ -2550,7 +2550,7 @@ html .select2-container--default .select2-results__group button {
 	float: right;
 }
 html .select2-container--default .select2-selection--multiple .select2-selection__choice {
-  background-color: #888;
+  background-color: #757575;
   color: #fff;
   border-color: transparent;
   position: relative;
